* libtool.m4, ltconfig.in: Merged in changes from most recent HEAD branch version. * ltmain.in: Merged in changes from most recent HEAD branch version (ILD updates), and fixed parallel build error. * tagdemo/acinclude.m4, tagdemo/aclocal.m4, tagdemo/configure: regenerated these files against updated libtool.m4.

--- a/ltmain.in
+++ b/ltmain.in
@@ -581,7 +581,7 @@ EOF
 	$show "$mkdir $objdir"
 	$run $mkdir $objdir
 	status=$?
-	if test $status -ne 0 && test ! -d $dir; then
+	if test $status -ne 0 && test ! -d $objdir; then
 	  exit $status
         fi
       fi 
@@ -879,6 +879,7 @@ EOF
 	      dlprefiles="$dlprefiles $arg"
 	    fi
 	    prev=
+	    continue
 	    ;;
 	  esac
 	  ;;
@@ -1421,10 +1422,19 @@ EOF
       linkmode=prog ;;
     esac
 
+    specialdeplibs=
+    libs=
+    # Find all interdependent deplibs that
+    # are linked more than once (e.g. -la -lb -la)
+    for deplib in $deplibs; do
+      case "$libs " in
+      *" $deplib "*) specialdeplibs="$specialdeplibs $deplib" ;;
+      esac
+      libs="$libs $deplib"
+    done
+
     if test $linkmode = lib; then
-      libs="$predeps $deplibs $postdeps"
-    else
-      libs="$deplibs"
+      libs="$predeps $libs $postdeps"
     fi
 
     deplibs=
@@ -1446,6 +1456,8 @@ EOF
 	done
 	;;
     prog)
+	compile_deplibs=
+	finalize_deplibs=
 	alldeplibs=no
 	newdlfiles=
 	newdlprefiles=
@@ -1463,7 +1475,11 @@ EOF
 	link) libs="$deplibs %DEPLIBS% $dependency_libs" ;;
 	esac
       fi
-
+      if test $pass = dlopen; then
+	# Collect dlpreopened libraries
+	save_deplibs="$deplibs"
+	deplibs=
+      fi
       for deplib in $libs; do
 	lib=
 	found=no
@@ -1484,11 +1500,11 @@ EOF
 	  done
 	  if test "$found" != yes; then
 	    if test "$linkmode,$pass" = "prog,link"; then
-	      compile_command="$compile_command $deplib"
-	      finalize_command="$finalize_command $deplib"
+	      compile_deplibs="$deplib $compile_deplibs"
+	      finalize_deplibs="$deplib $finalize_deplibs"
 	    else
-	      deplibs="$deplibs $deplib"
-	      test $linkmode = lib && newdependency_libs="$newdependency_libs $deplib"
+	      deplibs="$deplib $deplibs"
+	      test $linkmode = lib && newdependency_libs="$deplib $newdependency_libs"
 	    fi
 	    continue
 	  fi
@@ -1496,22 +1512,17 @@ EOF
 	-L*)
 	  case $linkmode in
 	  lib)
-	    case "$deplibs " in
-	    *" $deplib "*) ;;
-	    *)
-	      deplibs="$deplibs $deplib"
-	      newdependency_libs="$newdependency_libs $deplib"
-	      new_lib_search_path="$new_lib_search_path "`$echo "X$deplib" | $Xsed -e 's/^-L//'`
-	      ;;
-	    esac
+	    deplibs="$deplib $deplibs"
+	    newdependency_libs="$deplib $newdependency_libs"
+	    new_lib_search_path="$new_lib_search_path "`$echo "X$deplib" | $Xsed -e 's/^-L//'`
 	    ;;
 	  prog)
 	    if test $pass = scan; then
-	      deplibs="$deplibs $deplib"
+	      deplibs="$deplib $deplibs"
 	      new_lib_search_path="$new_lib_search_path "`$echo "X$deplib" | $Xsed -e 's/^-L//'`
 	    else
-	      compile_command="$compile_command $deplib"
-	      finalize_command="$finalize_command $deplib"
+	      compile_deplibs="$deplib $compile_deplibs"
+	      finalize_deplibs="$deplib $finalize_deplibs"
 	    fi
 	    ;;
 	  *)
@@ -1545,22 +1556,35 @@ EOF
 	      echo
 	      echo "*** Warning: Linking the shared library $output against the"
 	      echo "*** static library $deplib is not portable!"
-	      deplibs="$deplibs $deplib"
+	      deplibs="$deplib $deplibs"
 	    fi
 	    continue
 	    ;;
 	  prog)
-	    if test $pass = scan; then
-	      deplibs="$deplibs $deplib"
+	    if test $pass != link; then
+	      deplibs="$deplib $deplibs"
 	    else
-	      compile_command="$compile_command $deplib"
-	      finalize_command="$finalize_command $deplib"
+	      compile_deplibs="$deplib $compile_deplibs"
+	      finalize_deplibs="$deplib $finalize_deplibs"
 	    fi
 	    continue
 	    ;;
 	  esac
 	  ;;
-	*.lo | *.$objext) continue ;;
+	*.lo | *.$objext)
+	  if test $linkmode = prog; then
+	    if test $pass = dlpreopen || test "$dlopen_support" != yes || test "$build_libtool_libs" = no; then
+	      # If there is no dlopen support or we're linking statically,
+	      # we need to preload.
+	      newdlprefiles="$newdlprefiles $deplib"
+	      compile_deplibs="$deplib $compile_deplibs"
+	      finalize_deplibs="$deplib $finalize_deplibs"
+	    else
+	      newdlfiles="$newdlfiles $deplib"
+	    fi
+	  fi
+	  continue
+	  ;;
 	%DEPLIBS%)
 	  alldeplibs=yes
 	  continue
@@ -1687,24 +1711,31 @@ EOF
 
 	if test $linkmode = prog && test $pass != link; then
 	  new_lib_search_path="$new_lib_search_path $ladir"
-	  deplibs="$deplibs $lib"
+	  deplibs="$lib $deplibs"
 
 	  linkalldeplibs=no
 	  if test "$link_all_deplibs" != no || test "$fast_install" != no || \
 	     test "$build_libtool_libs" = no || test -z "$library_names"; then
 	    linkalldeplibs=yes
-	  else
-	    # Need to hardcode shared library paths
-	    # or/and link against static libraries
-	    newdependency_libs="$newdependency_libs $dependeny_libs"
 	  fi
 
+	  tmp_libs=
 	  for deplib in $dependency_libs; do
 	    case "$deplib" in
 	    -L*) new_lib_search_path="$new_lib_search_path "`$echo "X$deplib" | $Xsed -e 's/^-L//'`;; ### testsuite: skip nested quoting test
 	    esac
 	    # Need to link against all dependency_libs?
-	    test $linkalldeplibs = yes && deplibs="$deplibs $deplib"
+	    if test $linkalldeplibs = yes; then
+	      deplibs="$deplib $deplibs"
+	    else
+	      # Need to hardcode shared library paths
+	      # or/and link against static libraries
+	      newdependency_libs="$deplib $newdependency_libs"
+	    fi
+	    case "$tmp_libs " in
+	    *" $deplib "*) specialdeplibs="$specialdeplibs $deplib" ;;
+	    esac
+	    tmp_libs="$tmp_libs $deplib"
 	  done
 	  continue
 	fi
@@ -1714,11 +1745,18 @@ EOF
 	  convenience="$convenience $dir/$old_library"
 	  old_convenience="$old_convenience $dir/$old_library"
 	  if test $linkmode = lib; then
-	    deplibs="$deplibs $dir/$old_library"
-	    newdependency_libs="$newdependency_libs $dependency_libs"
+	    deplibs="$dir/$old_library $deplibs"
+	    tmp_libs=
+	    for deplib in $dependency_libs; do
+	      newdependency_libs="$deplib $newdependency_libs"
+	      case "$tmp_libs " in
+	      *" $deplib "*) specialdeplibs="$specialdeplibs $deplib" ;;
+	      esac
+	      tmp_libs="$tmp_libs $deplib"
+	    done
 	  elif test "$linkmode,$pass" = "prog,link"; then
-	    compile_command="$compile_command $dir/$old_library"
-	    finalize_command="$finalize_command $dir/$old_library"
+	    compile_deplibs="$dir/$old_library $compile_deplibs"
+	    finalize_deplibs="$dir/$old_library $finalize_deplibs"
 	  fi
 	  continue
 	fi
@@ -1896,28 +1934,18 @@ EOF
 	      esac
 	    fi
 	    if test $linkmode = prog; then
-	      if test -n "$add_dir"; then
-		case "$compile_command " in
-		*" $add_dir "*) ;;
-		*) compile_command="$compile_command $add_dir" ;;
-		esac
-	      fi
-	      test -n "$add" && compile_command="$compile_command $add"
+	      test -n "$add_dir" && compile_deplibs="$add_dir $compile_deplibs"
+	      test -n "$add" && compile_deplibs="$add $compile_deplibs"
 	    else
-	      if test -n "$add_dir"; then
-		case "$deplibs " in
-		*" $add_dir "*) ;;
-		*) deplibs="$deplibs $add_dir" ;;
-		esac
-	      fi
-	      test -n "$add" && deplibs="$deplibs $add"
+	      test -n "$add_dir" && deplibs="$add_dir $deplibs"
+	      test -n "$add" && deplibs="$add $deplibs"
 	      if test "$hardcode_direct" != yes && \
 		 test "$hardcode_minus_L" != yes && \
 		 test "$hardcode_shlibpath_var" = yes; then
-		  case ":$finalize_shlibpath:" in
-		  *":$libdir:"*) ;;
-		  *) finalize_shlibpath="$finalize_shlibpath$libdir:" ;;
-		  esac
+		case ":$finalize_shlibpath:" in
+		*":$libdir:"*) ;;
+		*) finalize_shlibpath="$finalize_shlibpath$libdir:" ;;
+		esac
 	      fi
 	    fi
 	  fi
@@ -1945,21 +1973,11 @@ EOF
 	    fi
 
 	    if test $linkmode = prog; then
-	      if test -n "$add_dir"; then
-		case "$finalize_command " in
-		*" $add_dir "*) ;;
-		*) finalize_command="$finalize_command $add_dir" ;;
-		esac
-	      fi
-	      test -n "$add" && finalize_command="$finalize_command $add"
+	      test -n "$add_dir" && finalize_deplibs="$add_dir $finalize_deplibs"
+	      test -n "$add" && finalize_deplibs="$add $finalize_deplibs"
 	    else
-	      if test -n "$add_dir"; then
-		case "$deplibs " in
-		*" $add_dir "*) ;;
-		*) deplibs="$deplibs $add_dir" ;;
-		esac
-	      fi
-	      test -n "$add" && deplibs="$deplibs $add"
+	      test -n "$add_dir" && deplibs="$add_dir $deplibs"
+	      test -n "$add" && deplibs="$add deplibs"
 	    fi
 	  fi
 	elif test $linkmode = prog; then
@@ -1968,19 +1986,11 @@ EOF
 	  # shared platforms.
 	  if test "$hardcode_direct" != unsupported; then
 	    test -n "$old_library" && linklib="$old_library"
-	    compile_command="$compile_command $dir/$linklib"
-	    finalize_command="$finalize_command $dir/$linklib"
+	    compile_deplibs="$dir/$linklib $compile_deplibs"
+	    finalize_deplibs="$dir/$linklib $finalize_deplibs"
 	  else
-	    case "$compile_command " in
-	    *" -L$dir "*) ;;
-	    *) compile_command="$compile_command -L$dir";;
-	    esac
-	    compile_command="$compile_command -l$name"
-	    case "$finalize_command " in
-	    *" -L$dir "*) ;;
-	    *) finalize_command="$finalize_command -L$dir";;
-	    esac
-	    finalize_command="$finalize_command -l$name"
+	    compile_deplibs="-l$name -L$dir $compile_deplibs"
+	    finalize_deplibs="-l$name -L$dir $finalize_deplibs"
 	  fi
 	elif test "$build_libtool_libs" = yes; then
 	  # Not a shared library
@@ -1997,7 +2007,7 @@ EOF
 	  else
 	    convenience="$convenience $dir/$old_library"
 	    old_convenience="$old_convenience $dir/$old_library"
-	    deplibs="$deplibs $dir/$old_library"
+	    deplibs="$dir/$old_library $deplibs"
 	    link_static=yes
 	  fi
 	fi
@@ -2023,9 +2033,16 @@ EOF
 
 	  new_lib_search_path="$new_lib_search_path $absdir"
 	  # Link against this library
-	  test "$link_static" = no && newdependency_libs="$newdependency_libs $abs_ladir/$laname"
+	  test "$link_static" = no && newdependency_libs="$abs_ladir/$laname $newdependency_libs"
 	  # ... and its dependency_libs
-	  newdependency_libs="$newdependency_libs $dependency_libs"
+	  tmp_libs=
+	  for deplib in $dependency_libs; do
+	    newdependency_libs="$deplib $newdependency_libs"
+	    case "$tmp_libs " in
+	    *" $deplib "*) specialdeplibs="$specialdeplibs $deplib" ;;
+	    esac
+	    tmp_libs="$tmp_libs $deplib"
+	  done
 
 	  if test $link_all_deplibs != no; then
 	    # Add the search paths of all dependency libraries
@@ -2062,24 +2079,70 @@ EOF
 		;;
 	      *) continue ;;
 	      esac
-	      case "$deplibs " in
+	      case " $deplibs " in
 	      *" $path "*) ;;
-	      *) deplibs="$path $deplibs" ;;
+	      *) deplibs="$deplibs $path" ;;
 	      esac
 	    done
 	  fi
 	fi
       done
       dependency_libs="$newdependency_libs"
-      # Make sure lib_search_path contains only unique directories.
-      lib_search_path=
-      for dir in $new_lib_search_path; do
-	case "$lib_search_path " in
-	*" $dir "*) ;;
-	*) lib_search_path="$lib_search_path $dir" ;;
-	esac
-      done
-      lib_search_path="$lib_search_path $sys_lib_search_path"
+      if test $pass = dlpreopen; then
+	# Link the dlpreopened libraries before other libraries
+	deplibs="$deplibs $save_deplibs"
+      elif test $pass != dlopen; then
+	# Make sure lib_search_path contains only unique directories.
+	lib_search_path=
+	for dir in $new_lib_search_path; do
+	  case "$lib_search_path " in
+	  *" $dir "*) ;;
+	  *) lib_search_path="$lib_search_path $dir" ;;
+	  esac
+	done
+	lib_search_path="$lib_search_path $sys_lib_search_path"
+
+	if test "$linkmode,$pass" != "prog,link"; then
+	  vars="deplibs"
+	else
+	  vars="compile_deplibs finalize_deplibs"
+	fi
+	for var in $vars dependency_libs; do
+	  # Make sure that $var contains only unique libraries
+	  # and add them in reverse order
+	  eval tmp_libs=\"\$$var\"
+	  new_libs=
+	  for deplib in $tmp_libs; do
+	    case "$deplib" in
+	    -L*) new_libs="$deplib $new_libs" ;;
+	    *)
+	      case " $specialdeplibs " in
+	      *" $deplib "*) new_libs="$deplib $new_libs" ;;
+	      *)
+		case " $new_libs " in
+		*" $deplib "*) ;;
+		*) new_libs="$deplib $new_libs" ;;
+		esac
+		;;
+	      esac
+	      ;;
+	    esac
+	  done
+	  tmp_libs=
+	  for deplib in $new_libs; do
+	    case "$deplib" in
+	    -L*)
+	      case " $tmp_libs " in
+	      *" $deplib "*) ;;
+	      *) tmp_libs="$tmp_libs $deplib" ;;
+	      esac
+	      ;;
+	    *) tmp_libs="$tmp_libs $deplib" ;;
+	    esac
+	  done
+	  eval $var=\"$tmp_libs\"
+	done
+      fi
     done
     if test $linkmode = prog; then
       dlfiles="$newdlfiles"
@@ -3015,11 +3078,14 @@ EOF
       fi
 
       if test "$preload" = yes; then
-	if test "$dlopen" = unknown && test "$dlopen_self" = unknown &&
+	if test "$dlopen_support" = unknown && test "$dlopen_self" = unknown &&
 	   test "$dlopen_self_static" = unknown; then
 	  $echo "$modename: warning: \`AC_LIBTOOL_DLOPEN' not used. Assuming no dlopen support."
 	fi
       fi
+
+      compile_command="$compile_command $compile_deplibs"
+      finalize_command="$finalize_command $finalize_deplibs"
 
       if test -n "$rpath$xrpath"; then
 	# If the user specified any rpath flags, then add them.
